--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -71,3 +71,11 @@ legend {
         height: auto;
     }
 }
+
+.pagination {
+    justify-content: center;
+}
+.page-link {
+    color: white;
+    background-color:#343a40;
+}
