--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10076,3 +10076,12 @@ legend {
   width: 80px;
   height: auto;
 }
+
+.pagination {
+  justify-content: center;
+}
+
+.page-link {
+  color: white;
+  background-color: #343a40;
+}
