--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -29,13 +29,14 @@ body {
     margin-bottom: 1px;
 }
 .filter {
-    margin-top: 4px;
+    margin-top: 2px;
 }
 
-.reservoir_id {
+.fil {
     border: none;
     top: 355px;
     height: 27px;
+    margin-bottom: 2px;
 }
 
 h2 {
